[package]
name = "batch0-sale-solana"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "=2.2.1"
thiserror = "2.0.12"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
arrayref = "0.3.8"
zeroize = "=1.8.1"
#solana-frozen-abi = "=2.0.7"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
